--- a/Monitoreo/Views/SuperCicloFormativo/Index.cshtml
+++ b/Monitoreo/Views/SuperCicloFormativo/Index.cshtml
@@ -152,7 +152,7 @@
                 iGroupingOrderByColumnIndex: 5,
                 sGroupLabelPrefix: "Tipo de Ciclo Formativo ",
                 oHideEffect: { method: "hide", duration: "slow", easing: "linear" },
-                oShowEffect: { method: "show", duration: "slow", easing: "linear" },                asExpandedGroups: [],
+                oShowEffect: { method: "show", duration: "slow", easing: "linear" },
             });
 
 
