--- a/Monitoreo/Views/EvaluacionAcompanamiento/Create.cshtml
+++ b/Monitoreo/Views/EvaluacionAcompanamiento/Create.cshtml
@@ -9,18 +9,22 @@
 </div>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="panel-body">
         <div class="form-horizontal">
             @Html.ValidationSummary(true)
 
-                @Html.EditorFor(model => model.Titulo)
-                @Html.EditorFor(model => model.TipoEvaluacionAcomp)
-               
-                @Html.EditorFor(model => model.creadoPor)
+            @Html.EditorFor(model => model.Titulo)
+            @Html.EditorFor(model => model.TipoEvaluacionAcomp)
+
+            <div class="form-group">
+                <div class="col-sm-4 col-sm-offset-3">
+                    Asignar a Personal (Deje vacio para asiganr a todos) @Html.DropDownListFor(model => model.PersonalFuncion, (IEnumerable<SelectListItem>)ViewBag.PersonalFunciones, "", new { @class = "form-control" })
+                </div>
+            </div>
         </div>
     </div>
     <div class="panel-footer">
